refactor: tidy the branch's new code and drop a helper left dead behind it
Mechanical cleanup over the code this branch added: `get(0)` to `getFirst()`, `assertTrue(x
instanceof T)` to `assertInstanceOf`, `assertTrue(!x.isEmpty())` to `assertFalse`,
`assertFalse(a.equals(b))` to `assertNotEquals`, `containsKey ? get : default` to
`getOrDefault`, `static` on test helpers that read no instance state, redundant
`Consumer<EvitaSessionContract>` casts and unused imports removed. Every replacement is
equivalent on the types involved, and the assertion ones carry better failure messages.

`setCategoryProductsIndexing` is deleted. The change that made de-indexing, rather than
lowering, the thing that ends membership maintenance moved all three of its callers to
`setCategoryProductsIndexed` and left the helper with none. It stayed invisible because the
replacement's JavaDoc still linked it to draw a contrast, which was enough to keep the
unused-method warning quiet; the contrast survives as prose. Its sibling
`setCategoriesIndexing` keeps two real callers and stays.

Three JavaDoc blocks were stranded above the wrong method by that same change and are moved
onto the methods they describe - `setCategoriesIndexing` had been left with none at all.
`ReferenceTypeCardinalityIndex` gets a `{@link}` that resolves: `TransactionalMap` is
imported nowhere in that file, so the short form named nothing.

Ref: #1585